gccida/g1/gen_mem_addressof
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_mem_addressof/src/function.c:3398:21: error: use of undeclared identifier 'machine_mode'
v3 = gen_reg_rtx( ( machine_mode)*( ( unsigned __int8 *)reg + 2)); 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_mem_addressof/src/function.c:3399:36: error: use of undeclared identifier 'machine_mode'
v4 = gen_rtx_fmt_eit( ADDRESSOF, ( machine_mode)( ( ( target_flags & 0x2000000) != 0) + 4), v3, rtint, decl); 
                                   ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_mem_addressof/src/function.c:3431:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)reg + 2), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_mem_addressof/src/function.c:3443:24: error: use of undeclared identifier 'machine_mode'
fixup_var_refs( reg, ( machine_mode)*( ( unsigned __int8 *)reg + 2), 0, reg, 0LL); 
                       ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_mem_addressof/src/obj/function.o] Error 1
